--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,27 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  form(action="/api/vhost/", method='post')
+    label
+      input(type='text', name='name', autofocus)
+    label
+      input(type='text', name='root')
+    label
+      input(type='text', name='proxy', value='[{"path":"/","proxy":"http://127.0.0.1:3000/"},{"path":"/js","proxy":"http://127.0.0.1:3000/js"}]')
+    input(type='submit')
+
+block footer-js
+  script(src='/js/jquery.min.js')
+  script.
+    //- $.getJSONP('/api/vhost/', function(json) {
+    //-     console.log(json)
+    //-   });
+    $.ajax({
+      url: '/api/vhost',
+      type: 'get',
+      dataType: 'jsonp',
+      success: function(json) {
+        console.log(json);
+      }
+    })
+
