--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,9 +2,13 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
+    //link(rel='stylesheet', href='/bootstrap/css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/css/style.css')
   body
     block content
 
 
+    script(src='/js/jquery.min.js')
+    script(src='/bootstrap/js/bootstrap.min.js')
     block footer-js
