--- a/views/index.jade
+++ b/views/index.jade
@@ -1,88 +1,94 @@
 extends layout
 
 block content
-	.container
-		.jumbotron
-			p 当前IP：
-				input#J_ip(readonly, style='border: none; background-color: transparent; outline: none; font-size: 48px;')
-		
-		.well
-			button.btn.btn-primary(id='J_restart', data-loading-text='重启中...') 重启Apache
-		.well
-			h3 host操作
-			textarea.form-control(id='J_host',rows='10',cols='100')
-			br
-			button.btn.btn-default(id='J_read', data-loading-text='读取中') 读取host
-			button.btn.btn-primary(id='J_write') 写入host
-		.row
-			.col-md-12
-				table.table.table-striped.table-bordered
-					caption 虚拟主机列表
-					thead
-						tr
-							th 域名
-							th 本地路径
-							th 操作
-					tbody#J_vhost_list
-				.well		
-					button.btn.btn-primary(data-toggle='modal', data-target='#J_modal_add_vhost') 添加一条记录
-	#J_modal_add_vhost.modal.fade(tabindex='-1', role='dialog')
-		.modal-dialog
-			.modal-content
-				.modal-header
-					button.close(data-dismiss='modal') &times;
-					h4.modal-title 添加vhost
-				.modal-body
-					form.form-horizontal(action="/api/vhost/", method='post')
-						.form-group
-							label.control-label.col-md-2 Name
-							.col-md-6
-								input.form-control(type='text', name='name', required)
-						.form-group
-							label.control-label.col-md-2 Root
-							.col-md-6
-								input.form-control(type='text', name='root', required)
-						.form-group
-							label.control-label.col-md-2 反向代理
-							.col-md-10
-								.panel.panel-default
-									.panel-heading
-										.row
-											.col-md-2
-												| 路径
-											.col-md-8
-												| 代理地址
-									.panel-body
-										ul#J_proxy_list.list-group
-										button#J_btn_add_proxy.btn.btn-info.btn-xs(type='button') 添加
-				.modal-footer
-					button.btn.btn-default(data-dismiss='modal') close
-					button.btn.btn-primary.J_submit 提交
+    .container
+        .jumbotron
+            p 当前IP：
+                input#J_ip(readonly, style='border: none; background-color: transparent; outline: none; font-size: 48px;')
+        
+        .well
+            button.btn.btn-primary(id='J_restart', data-loading-text='重启中...') 重启Apache
+        .well
+            h3 host操作
+            textarea.form-control(id='J_host',rows='10',cols='100')
+            br
+            button.btn.btn-default(id='J_read', data-loading-text='读取中') 读取host
+            button.btn.btn-primary(id='J_write') 写入host
+        .row
+            .col-md-12
+                table.table.table-striped.table-bordered
+                    caption 虚拟主机列表
+                    thead
+                        tr
+                            th 域名
+                            th 本地路径
+                            th 操作
+                    tbody#J_vhost_list
+                .well       
+                    button.btn.btn-primary(data-toggle='modal', data-target='#J_modal_add_vhost') 添加一条记录
+        .well
+            h3 vhost源码
+            textarea.form-control(id='J_vhost',rows='10',cols='100')
+            br
+            button.btn.btn-default(id='J_btn_read_vhost', data-loading-text='读取中') 读取vhost
+            button.btn.btn-primary(id='J_btn_write_vhost') 写入vhost
+    #J_modal_add_vhost.modal.fade(tabindex='-1', role='dialog')
+        .modal-dialog
+            .modal-content
+                .modal-header
+                    button.close(data-dismiss='modal') &times;
+                    h4.modal-title 添加vhost
+                .modal-body
+                    form.form-horizontal(action="/api/vhost/", method='post')
+                        .form-group
+                            label.control-label.col-md-2 Name
+                            .col-md-6
+                                input.form-control(type='text', name='name', required)
+                        .form-group
+                            label.control-label.col-md-2 Root
+                            .col-md-6
+                                input.form-control(type='text', name='root', required)
+                        .form-group
+                            label.control-label.col-md-2 反向代理
+                            .col-md-10
+                                .panel.panel-default
+                                    .panel-heading
+                                        .row
+                                            .col-md-2
+                                                | 路径
+                                            .col-md-8
+                                                | 代理地址
+                                    .panel-body
+                                        ul#J_proxy_list.list-group
+                                        button#J_btn_add_proxy.btn.btn-info.btn-xs(type='button') 添加
+                .modal-footer
+                    button.btn.btn-default(data-dismiss='modal') close
+                    button.btn.btn-primary.J_submit 提交
 
-	script(type='x-tmpl-mustache', id='J_tmpl_vhost_item')
-		| {{#data}}
-		tr(data-name='{{name}}', data-root='{{root}}', data-proxy='{{_proxy}}', data-input='{{input}}')
-			td {{name}}
-			td {{root}}
-			td
-				a.btn.btn-sm.btn-info(href='#')
-					span.glyphicon.glyphicon-pencil
-				a.btn.btn-sm.btn-danger.J_delete(href='#')
-					span.glyphicon.glyphicon-remove
-		| {{/data}}
+    script(type='x-tmpl-mustache', id='J_tmpl_vhost_item')
+        | {{#data}}
+        tr(data-name='{{name}}', data-root='{{root}}', data-proxy='{{_proxy}}', data-input='{{input}}')
+            td {{name}}
+            td {{root}}
+            td
+                a.btn.btn-sm.btn-info(href='#')
+                    span.glyphicon.glyphicon-pencil
+                a.btn.btn-sm.btn-danger.J_delete(href='#')
+                    span.glyphicon.glyphicon-remove
+        | {{/data}}
 
-	script(type='x-tmpl-mustache', id='J_tmpl_proxy_item')
-		li.list-group-item
-			.row
-				.col-md-2
-					input.form-control(type='text', name='proxyDir', value='{{dir}}')
-				.col-md-6
-					input.form-control(type='text', name='proxyPath', value='{{path}}')
-				.col-md-2
-					a.btn.btn-xs.btn-danger.J_delete(href='#')
-						span.glyphicon.glyphicon-remove
+    script(type='x-tmpl-mustache', id='J_tmpl_proxy_item')
+        li.list-group-item
+            .row
+                .col-md-2
+                    input.form-control(type='text', name='proxyDir', value='{{dir}}')
+                .col-md-6
+                    input.form-control(type='text', name='proxyPath', value='{{path}}')
+                .col-md-2
+                    a.btn.btn-xs.btn-danger.J_delete(href='#')
+                        span.glyphicon.glyphicon-remove
 block footer-js
-	script(src='/js/mustache.js')
-	script(src='/js/index.js')
+    script(src='/js/mustache.js')
+    script(src='/js/index.js')
 
 
